fix top padding on mobile
.box {
margin: 1em;
overflow-x: hidden;
padding: 15em 2em !important;
}

--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -40,7 +40,7 @@
 	.box {
 		margin: 1em;
 		overflow-x: hidden;
-		padding: 2em 2em !important;
+		padding: 15em 2em !important;
 	}
 
 		.box.features .features-row {
