--- a/assets/css/style-mobilep.css
+++ b/assets/css/style-mobilep.css
@@ -59,7 +59,7 @@
 	.box {
 		border-radius: 0;
 		box-shadow: none;
-		margin: 1em 0 0 0;
+		margin: 12em 0 0 0;
 		padding: 3em 1em !important;
 	}
 
